--- a/reactapp/src/assets/translations/de/general.json
+++ b/reactapp/src/assets/translations/de/general.json
@@ -8,7 +8,7 @@
   "button-insert": "Eingeben",
   "button-next-exercise": "Nächste Aufgabe",
   "button-return": "Zurückkehren",
-  "button-return-home": "Zurück",
+  "button-return-home": "Startseite",
   "button-yes": "Ja",
   "button-no": "Nein",
   "switch-on": "An",
@@ -59,5 +59,31 @@
   "login-name": "Benutzername",
   "login-password": "Passwort",
   "construction": "Dieser Inhalt befindet sich momentan noch in Bearbeitung.",
-  "flexibility-study": "Studie zum Flexibilitätstraining"
+  "flexibility-study": "Studie zum Flexibilitätstraining",
+  "goal-setting": "Zielsetzung",
+  "current-goal": "Aktuelles Ziel",
+  "progress-overview": "Fortschrittsübersicht",
+  "none": "Keine",
+  "any": "Jeder",
+  "strat-equi": "Gleichsetzung",
+  "strat-subs": "Einsetzung",
+  "strat-elim": "Additionstechnik",
+  "strat-flex": "Flexibilität",
+  "goal-1-correct": "1 Frage richtig",
+  "goal-3-correct": "3 Fragen in Folge richtig",
+  "goal-5-correct": "5 Fragen in Folge richtig",
+  "goal-recover": "Nach Fehler zurückkommen",
+  "goal-level-5-correct": "Ein Problem der Stufe 5 lösen",
+  "system-solution-success": "Gut gemacht, du hast das Gleichungssystem gelöst!",
+  "great-choice": "Gute Wahl! Wie sicher fühlst du dich mit dieser Methode?",
+  "ive-got-this": "Ich habe das!",
+  "im-not-sure": "Ich bin nicht sicher",
+  "feel-free-update-goal": "Aktualisiere gerne dein aktuelles Ziel und mache dich mit der Methode vertraut, bevor du sie hier anwendest!",
+  "change-goal": "Ziel ändern",
+  "im-fine": "Mir geht's gut!",
+  "how-do-you-feel-problem": "Wie denkst du darüber, an diesem Problem zu arbeiten?",
+  "lets-do-this": "Los geht's!",
+  "im-anxious": "Ich bin nervös",
+  "remember-youre-learning": "Das ist völlig normal! Denk dran: Du lernst noch, und es ist okay, wenn du etwas nicht sofort verstehst oder Fehler machst!",
+  "ill-do-my-best": "Ich geb mein Bestes"
 }
