--- a/reactapp/src/assets/translations/en/general.json
+++ b/reactapp/src/assets/translations/en/general.json
@@ -8,7 +8,7 @@
   "button-insert": "Enter",
   "button-next-exercise": "Next exercise",
   "button-return": "Return",
-  "button-return-home": "Return",
+  "button-return-home": "Home",
   "button-yes": "Yes",
   "button-no": "No",
   "switch-on": "On",
@@ -59,5 +59,31 @@
   "login-name": "Username",
   "login-password": "Password",
   "construction": "This content is currently still under construction.",
-  "flexibility-study": "Study for Flexibility Training"
+  "flexibility-study": "Study for Flexibility Training",
+  "goal-setting": "Goal Setting",
+  "current-goal": "Current Goal",
+  "progress-overview": "Progress Overview",
+  "none": "None",
+  "any": "Any",
+  "strat-equi": "Equalization",
+  "strat-subs": "Substitution",
+  "strat-elim": "Elimination",
+  "strat-flex": "Flexibility",
+  "goal-1-correct": "Get 1 question correct",
+  "goal-3-correct": "Get 3 questions correct in a row",
+  "goal-5-correct": "Get 5 questions correct in a row",
+  "goal-recover": "Recover after a mistake",
+  "goal-level-5-correct": "Solve a level 5 problem",
+  "system-solution-success": "Well done, you have solved the system!",
+  "great-choice": "Great choice! How confident do you feel using this method?",
+  "ive-got-this": "I’ve got this!",
+  "im-not-sure": "I'm not sure",
+  "feel-free-update-goal": "Feel free to update your current goal and get comfortable with the method before using it here!",
+  "change-goal": "Change goal",
+  "im-fine": "I'm fine!",
+  "how-do-you-feel-problem": "How do you feel about working on this problem?",
+  "lets-do-this": "Let's do this!",
+  "im-anxious": "I'm anxious",
+  "remember-youre-learning": "That's perfectly normal! Remember, you're learning and it's okay to not understand immediately or make mistakes!",
+  "ill-do-my-best": "I'll do my best"
 }
