Added redundant translations from General (was not working online)

--- a/reactapp/src/assets/translations/en/flexibility.json
+++ b/reactapp/src/assets/translations/en/flexibility.json
@@ -150,5 +150,12 @@
   "elimination-def": "The elimination method attempts to eliminate a variable by adding or subtracting the equations in the LSE.",
   "Suitability": "Identifying suitable methods",
   "Efficiency": "Identifying efficient methods",
-  "Matching": "Matching systems to methods"
+  "Matching": "Matching systems to methods",
+  "system-solution-success": "Well done, you have solved the system!",
+  "great-choice": "Great choice! How confident do you feel using this method?",
+  "ive-got-this": "I’ve got this!",
+  "im-not-sure": "I'm not sure",
+  "feel-free-update-goal": "Feel free to update your current goal and get comfortable with the method before using it here!",
+  "change-goal": "Change goal",
+  "im-fine": "I'm fine!"
 }
