Changed to 'Exercises'

--- a/reactapp/src/assets/translations/de/general.json
+++ b/reactapp/src/assets/translations/de/general.json
@@ -69,11 +69,11 @@
   "strat-subs": "Einsetzung",
   "strat-elim": "Additionstechnik",
   "strat-flex": "Flexibilität",
-  "goal-1-correct": "1 Frage richtig",
-  "goal-3-correct": "3 Fragen in Folge richtig",
-  "goal-5-correct": "5 Fragen in Folge richtig",
+  "goal-1-correct": "Löse 1 Übung korrekt",
+  "goal-3-correct": "Löse 3 Übungen in Folge korrekt",
+  "goal-5-correct": "Löse 5 Übungen in Folge korrekt",
   "goal-recover": "Nach Fehler zurückkommen",
-  "goal-level-5-correct": "Ein Problem der Stufe 5 lösen",
+  "goal-level-5-correct": "Löse eine Übung der Stufe 5",
   "system-solution-success": "Gut gemacht, du hast das Gleichungssystem gelöst!",
   "great-choice": "Gute Wahl! Wie sicher fühlst du dich mit dieser Methode?",
   "ive-got-this": "Ich habe das!",
