Changed to 'Exercises'

--- a/reactapp/src/assets/translations/en/general.json
+++ b/reactapp/src/assets/translations/en/general.json
@@ -69,11 +69,11 @@
   "strat-subs": "Substitution",
   "strat-elim": "Elimination",
   "strat-flex": "Flexibility",
-  "goal-1-correct": "Get 1 question correct",
-  "goal-3-correct": "Get 3 questions correct in a row",
-  "goal-5-correct": "Get 5 questions correct in a row",
+  "goal-1-correct": "Solve 1 exercise correctly",
+  "goal-3-correct": "Solve 3 exercises correctly in a row",
+  "goal-5-correct": "Solve 5 exercises correctly in a row",
   "goal-recover": "Recover after a mistake",
-  "goal-level-5-correct": "Solve a level 5 problem",
+  "goal-level-5-correct": "Solve a level 5 exercise",
   "system-solution-success": "Well done, you have solved the system!",
   "great-choice": "Great choice! How confident do you feel using this method?",
   "ive-got-this": "I’ve got this!",
