--- a/reactapp/src/assets/translations/de/general.json
+++ b/reactapp/src/assets/translations/de/general.json
@@ -72,7 +72,7 @@
   "goal-1-correct": "Löse 1 Übung korrekt",
   "goal-3-correct": "Löse 3 Übungen in Folge korrekt",
   "goal-5-correct": "Löse 5 Übungen in Folge korrekt",
-  "goal-recover": "Nach Fehler zurückkommen",
+  "goal-recover": "Nach einem Fehler zurückkommen",
   "goal-level-5-correct": "Löse eine Übung der Stufe 5",
   "system-solution-success": "Gut gemacht, du hast das Gleichungssystem gelöst!",
   "great-choice": "Gute Wahl! Wie sicher fühlst du dich mit dieser Methode?",
