Changed to 'Exercises' AND tweaked "remember"

--- a/reactapp/src/assets/translations/en/general.json
+++ b/reactapp/src/assets/translations/en/general.json
@@ -84,6 +84,6 @@
   "how-do-you-feel-problem": "How do you feel about working on this problem?",
   "lets-do-this": "Let's do this!",
   "im-anxious": "I'm anxious",
-  "remember-youre-learning": "That's perfectly normal! Remember, you're learning and it's okay to not understand immediately or make mistakes!",
+  "remember-youre-learning": "Remember, you're learning and it's okay to not understand immediately or make mistakes!",
   "ill-do-my-best": "I'll do my best"
 }
