Changed to 'Exercises' AND tweaked "remember"

--- a/reactapp/src/assets/translations/de/general.json
+++ b/reactapp/src/assets/translations/de/general.json
@@ -84,6 +84,6 @@
   "how-do-you-feel-problem": "Wie denkst du darüber, an diesem Problem zu arbeiten?",
   "lets-do-this": "Los geht's!",
   "im-anxious": "Ich bin nervös",
-  "remember-youre-learning": "Das ist völlig normal! Denk dran: Du lernst noch, und es ist okay, wenn du etwas nicht sofort verstehst oder Fehler machst!",
+  "remember-youre-learning": "Denk dran, du lernst noch, und es ist okay, wenn du etwas nicht sofort verstehst oder Fehler machst!",
   "ill-do-my-best": "Ich geb mein Bestes"
 }
