--- a/reactapp/src/assets/translations/en/general.json
+++ b/reactapp/src/assets/translations/en/general.json
@@ -75,7 +75,7 @@
   "goal-recover": "Recover after a mistake",
   "goal-level-5-correct": "Solve a level 5 exercise",
   "system-solution-success": "Well done, you have solved the system!",
-  "great-choice": "Great choice! How confident do you feel using this method?",
+  "great-choice": "Great choice! How confident do you feel about using this method?",
   "ive-got-this": "I’ve got this!",
   "im-not-sure": "I'm not sure",
   "feel-free-update-goal": "Feel free to update your current goal and get comfortable with the method before using it here!",
