--- a/reactapp/src/assets/translations/en/flexibility.json
+++ b/reactapp/src/assets/translations/en/flexibility.json
@@ -152,7 +152,7 @@
   "Efficiency": "Identifying efficient methods",
   "Matching": "Matching systems to methods",
   "system-solution-success": "Well done, you have solved the system!",
-  "great-choice": "Great choice! How confident do you feel using this method?",
+  "great-choice": "Great choice! How confident do you feel about using this method?",
   "ive-got-this": "I’ve got this!",
   "im-not-sure": "I'm not sure",
   "feel-free-update-goal": "Feel free to update your current goal and get comfortable with the method before using it here!",
